fix: make overflow fields , change form

--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ div.container_our_services{
 }
 div.services{
     background-color: #f2f2f2;
-    border-bottom:6px solid #ffffff;
+    border-bottom:7px solid #ffffff;
     
 }
 div.our_services{
@@ -149,12 +149,14 @@ text-align: left;
 
 }
 div.our_services p{
+    height: 60px;
     font-size:18px;
     padding-top:27px;
     line-height: 30px;
     color: #767e9e;
     font-family: "Lato";
     font-weight: 300;
+    overflow: hidden;
   
 }
 div.info  {
@@ -189,6 +191,8 @@ padding-bottom:9px;
 }
 
 div.info li p{
+height: 66px;
+overflow: hidden;
 font-size: 12px;
 line-height: 22px;
 color: #767e9e;
@@ -209,7 +213,7 @@ div.info li div{
 div.portfolio{
     background-color: #2d303a;
     border-bottom: 6px solid #323746;  
-    height: 864px;
+    height: 863px;
 }
 .container_portfolio{
    
@@ -221,6 +225,8 @@ div.portfolio{
 }
 div.container_portfolio h3{
 padding-top: 68px;
+overflow: hidden;
+height: 22px;
 letter-spacing:1px;
 font-size: 30px;
 line-height: 18px;
@@ -231,9 +237,10 @@ text-align: left;
 }
 
 div.container_portfolio p{
-    padding-top: 29px;
+    overflow: hidden;
+    padding-top: 24px;
     width: 940px;
-    height: 40px;
+    height: 39px;
     font-size: 18px;
     line-height: 30px;
     color: #767e9e;
@@ -268,7 +275,7 @@ div.portfolio_img{
     width: 1020px;
    
     
-    padding-top: 18px;
+    padding-top: 19px;
 
 }
 div.portfolio_img img{
@@ -287,9 +294,11 @@ div.container_about_us{
    
 }
 div.about_us h3{
-padding-top: 68px;
+padding-top: 62px;
 font-size: 30px;
-line-height: 18px;
+overflow: hidden;
+line-height:30px;
+height: 30px;
 color: #666d89;
 font-family: "Lato";
 font-weight: 900;
@@ -297,10 +306,12 @@ text-align: left;
 }
 
 div.about_us p{
-padding-top: 28px;
+height: 60px;
+padding-top: 21px;
 font-size: 18px;
 line-height: 30px;
 color: #767e9e;
+overflow: hidden;
 font-family: "Lato";
 font-weight: 300;
 text-align: left;
@@ -310,7 +321,7 @@ div.team{
     justify-content: space-between;
 }
 div.persons{
-    padding-top: 44px;
+    padding-top: 45px;
     width: 300px;
 }
 div.team p{
@@ -333,7 +344,7 @@ div.team h4{
     text-align: left;
 }
 div.social{
-    padding-top:22px;
+    padding-top:7px;
 }
 div.social a{
     padding-right: 5px;
@@ -367,6 +378,8 @@ div.container_get_a_quote{
 }
 
 div.container_get_a_quote h3{
+overflow: hidden;
+height: 26px;
 font-size: 30px;
 line-height: 18px;
 color: #f0d8d9;
@@ -376,6 +389,7 @@ text-align: left;
 padding-top: 68px;
 }
 div.container_get_a_quote p{
+overflow: hidden;
 width: 940px;
 height: 57px;
 font-size: 18px;
@@ -384,7 +398,7 @@ color: #f0d8d9;
 font-family: "Lato";
 font-weight: 300;
 text-align: left;
-padding-top: 27px;
+padding-top: 19px;
 }
 div.form{
 width: 620px;
@@ -457,6 +471,7 @@ input::placeholder {
      
   }
   div.contact_inf p{
+    overflow: hidden;
     width: 300px;
     height: 108px;
     font-size: 12px;
@@ -468,6 +483,8 @@ input::placeholder {
     padding-top: 10px;
   }
   div.contact_inf h3{
+    height: 19px;
+    overflow: hidden;
     font-size: 18px;
     line-height: 18px;
     color: #f0d8d9;
